--- a/src/app/view/home/home.page.html
+++ b/src/app/view/home/home.page.html
@@ -8,27 +8,16 @@
 
 <ion-content [fullscreen]="true">
   <ion-list>
-    <ion-item-group *ngFor="let contato of contatos">
-      <ion-item lines="none">
-        <ion-label>Nome: {{ contato.nome }}</ion-label>
-      </ion-item>
-
-      <ion-item lines="none">
-        <ion-label>Telefone: {{ contato.telefone }}</ion-label>
-      </ion-item>
-
-      <ion-item lines="none" *ngIf="contato.dataNascimento && contato.dataNascimento !== ''">
-        <ion-label>
-          Data de Nascimento: {{ contato.dataNascimento | date:'dd/MM/yyyy' }}
-        </ion-label>
-      </ion-item>
-
-      <ion-item lines="none" *ngIf="contato.genero && contato.genero !== ''">
-        <ion-label>
-          Gênero: {{ contato.genero }}
-        </ion-label>
-      </ion-item>
-    </ion-item-group>
+    @for (item of contatos; track $index) {
+    <ion-item-sliding>
+      <ion-item>{{item.nome}}</ion-item>
+      <ion-item-options side="end">
+        <ion-item-option (click)="detalhar(item)">
+          <ion-icon name="create-outline"></ion-icon>
+        </ion-item-option>
+      </ion-item-options>
+    </ion-item-sliding>
+  }
   </ion-list> 
 
   <ion-fab vertical="bottom" horizontal="end" slot="fixed">
