--- a/src/app/view/home/home.page.html
+++ b/src/app/view/home/home.page.html
@@ -1,30 +1,61 @@
+<ion-menu contentId="main-content" side="start">
+  <ion-header>
+    <ion-toolbar>
+      <ion-title>Configurações</ion-title>
+    </ion-toolbar>
+  </ion-header>
+  <ion-content>
+    <ion-list>
+      <ion-item button (click)="abrirConfiguracoes()">
+        <ion-icon name="settings-outline" slot="start"></ion-icon>
+        <ion-label>Configurações</ion-label>
+      </ion-item>
+    </ion-list>
+  </ion-content>
+</ion-menu>
+
 <ion-header [translucent]="true">
-  <ion-toolbar>
+  <ion-toolbar class="ion-toolbar">
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
     <ion-title>
       Agenda de Contatos
     </ion-title>
-  </ion-toolbar>
+  </ion-toolbar>  
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-list>
+<ion-content [fullscreen]="true" class="ion-padding" id="main-content">
+  <ion-list class="contato-lista" lines="none">
     @for (item of contatos; track $index) {
-    <ion-item-sliding>
-      <ion-item>{{item.nome}}</ion-item>
-      <ion-item-options side="end">
-        <ion-item-option (click)="detalhar(item)">
-          <ion-icon name="create-outline"></ion-icon>
-        </ion-item-option>
-      </ion-item-options>
-    </ion-item-sliding>
-  }
-  </ion-list> 
+      <ion-item-sliding class="contato-card-wrapper">
+        <ion-item class="contato-card">
+          <ion-label class="texto-contato">
+            <h2>{{ item.nome }}</h2>
+            <p *ngIf="item.telefone">{{ item.telefone }}</p>
+          </ion-label>
+
+        </ion-item>
+
+        <ion-item-options side="end">
+          <ion-item-option color="tertiary" (click)="detalhar(item)">
+            <ion-icon name="create-outline" slot="icon-only"></ion-icon>
+          </ion-item-option>
+        </ion-item-options>
+      </ion-item-sliding>
+    }
+  </ion-list>
 
   <ion-fab vertical="bottom" horizontal="end" slot="fixed">
-    <ion-fab-button (click)="irParaCadastrar()"> 
+    <ion-fab-button class="ion-fab-button" (click)="irParaCadastrar()">
       <ion-icon name="add"></ion-icon>
     </ion-fab-button>
   </ion-fab>
 </ion-content>
+
+
+
+
+
 
 
