--- a/src/app/view/home/home.page.scss
+++ b/src/app/view/home/home.page.scss
@@ -17,13 +17,13 @@
 }
   
 .ion-fab-button {
-    --background: #3d3e3d; 
-    --color: white;        
+    background: #3d3e3d; 
+    color: white;        
 }
   
 .ion-toolbar {
-    --background: #323438; 
-    --color: white;       
+    background: #323438; 
+    color: white;       
   }
   
   
