--- a/src/app/view/home/home.page.html
+++ b/src/app/view/home/home.page.html
@@ -15,7 +15,7 @@
 </ion-menu>
 
 <ion-header [translucent]="true">
-  <ion-toolbar class="ion-toolbar">
+  <ion-toolbar>
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
@@ -27,31 +27,29 @@
 
 <ion-content [fullscreen]="true" class="ion-padding" id="main-content">
   <ion-list class="contato-lista" lines="none">
-    @for (item of contatos; track $index) {
-      <ion-item-sliding class="contato-card-wrapper">
-        <ion-item class="contato-card">
-          <ion-label class="texto-contato">
-            <h2>{{ item.nome }}</h2>
-            <p *ngIf="item.telefone">{{ item.telefone }}</p>
-          </ion-label>
+    <ion-item-sliding *ngFor="let item of contatos; let i = index" class="contato-card-wrapper">
+      <ion-item class="contato-card">
+        <ion-label class="texto-contato">
+          <h2>{{ item.nome }}</h2>
+          <p *ngIf="item.telefone">{{ item.telefone }}</p>
+        </ion-label>
+      </ion-item>
 
-        </ion-item>
-
-        <ion-item-options side="end">
-          <ion-item-option color="tertiary" (click)="detalhar(item)">
-            <ion-icon name="create-outline" slot="icon-only"></ion-icon>
-          </ion-item-option>
-        </ion-item-options>
-      </ion-item-sliding>
-    }
+      <ion-item-options side="end">
+        <ion-item-option color="tertiary" (click)="detalhar(item)">
+          <ion-icon name="create-outline" slot="icon-only"></ion-icon>
+        </ion-item-option>
+      </ion-item-options>
+    </ion-item-sliding>
   </ion-list>
 
   <ion-fab vertical="bottom" horizontal="end" slot="fixed">
-    <ion-fab-button class="ion-fab-button" (click)="irParaCadastrar()">
+    <ion-fab-button (click)="irParaCadastrar()">
       <ion-icon name="add"></ion-icon>
     </ion-fab-button>
   </ion-fab>
 </ion-content>
+
 
 
 
